# eBull

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  dev.ps1  docker-compose.yml  pyproject.toml  stack-restart.ps1  stack-restart.sh  stack-stop.ps1  stack-stop.sh  stack.ps1  stack.sh  start.ps1
.autonomy/: config.yaml  hard_rules.md  loop_prompt.md
.claude/: CLAUDE.md  settings.json
.githooks/: pre-push
.github/: pull_request_template.md
app/: cli.py  config.py  main.py
docs/: architecture.md  etoro-api-reference.md  etoro-coverage-matrix.md  per-exchange-capability-matrix.md  review-prevention-log.md  scoring-model.md  settled-decisions.md  tax-engine.md  trading-policy.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
scripts/: _check_ownership_writer_columns.py  _dev_guard.py  _etl_source_inventory.py  _p6_trigger_bootstrap.py  _trigger_monitor_positions.py  _trigger_portfolio_sync.py  audit_agent_cik_contamination.py  audit_frontend_bulk.mjs  backfill_1638_retire_issuer_cik_blockholders.py  backfill_1792_sec_nt.py  backfill_1805_insider_decollision.py  backfill_1974_sec_424b.py  backfill_1982_sec_tender.py  backfill_2008_ttm.py  backfill_2110_sgml_tombstones.py  backfill_828_mislink_repair.py  backfill_864_sec_manifest.py  backfill_8k_items.py  backfill_company_facts.py  backfill_fsds_class_shares_history.py  backfill_instrument_history.py  backfill_red_flag_score.py  backfill_xbrl_normalization.py  bench_fundamentals_upsert.py  check_13dg_retention.sh  check_13f_hr_retention.sh  check_anthropic_timeout.sh  check_archive_url_agent_guard.sh  check_bulk_ingest_copy_pattern.sh  check_business_summary_latest_only.sh  check_caller_owned_tx.py  check_caller_owned_tx.sh  check_ci_mirrors_prepush.sh  check_def14a_cap.sh  check_etl_source_docs.sh  (+44 more)
(+2222 files in other folders)
