[project]
name = "trader-os"
version = "0.1.0"
description = "Long-horizon AI-assisted investment engine for eToro"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.4.0",
  "pyright>=1.1.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
