[project]
name = "ebull"
version = "0.1.0"
description = "Long-horizon AI-assisted investment engine for eToro"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "anthropic>=0.40.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
  "httpx>=0.27.0",
  "argon2-cffi>=23.1.0",
  "cryptography>=43.0.0",
  "platformdirs>=4.2.0",
  "apscheduler>=3.10",
  "redis[hiredis]>=5.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.4.0",
  "pyright>=1.1.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.14"
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: marks tests that require a live Postgres connection (deselect with -m 'not integration')",
]
